United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7086560 7085404 changes broke VM with -XX:-EnableInvokeDynamic
7086560 : 7085404 changes broke VM with -XX:-EnableInvokeDynamic

Details
Type:
Bug
Submit Date:
2011-09-02
Status:
Closed
Updated Date:
2011-11-28
Project Name:
JDK
Resolved Date:
2011-11-28
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
8-pool
Fixed Versions:
hs22

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
[kvn@intelsdv42 VM.7085404]$ unzip -q /net/prt-archiver/data/jprt/archive/2011/09/2011-09-02-073843.ct232829.7085404/bundles/linux_x64_2.6-fastdebug.zip 
[kvn@intelsdv42 VM.7085404]$ bin/java -Xcomp t
Error: Could not find or load main class t
[kvn@intelsdv42 VM.7085404]$ bin/java -XX:+UnlockDiagnosticVMOptions -XX:-EnableInvokeDynamic -Xcomp t
VM option '+UnlockDiagnosticVMOptions'
VM option '-EnableInvokeDynamic'
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  SIGSEGV (0xb) at pc=0x00002b4534629812, pid=6112, tid=1095731520
#
# JRE version: 7.0-b147
# Java VM: Java HotSpot(TM) 64-Bit Server VM (22.0-b02-internal-201109020738.ct232829.7085404-fastdebug compiled mode linux-amd64 compressed oops)
# Problematic frame:
# V  [libjvm.so+0x494812]  ciKlass::is_subclass_of(ciKlass*)+0x22
#
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /export/kvn/VM.7085404/hs_err_pid6112.log
#
# If you would like to submit a bug report, please visit:
#   http://bugreport.sun.com/bugreport/crash.jsp
#


Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V  [libjvm.so+0x32ec0f]  ciKlass::is_subclass_of(ciKlass*)+0x8f
V  [libjvm.so+0x71ce71]  Parse::do_field_access(bool, bool)+0x1d1
V  [libjvm.so+0x71ad11]  Parse::do_one_bytecode()+0x33c1
V  [libjvm.so+0x70b54c]  Parse::do_one_block()+0x1ac
V  [libjvm.so+0x70df5f]  Parse::do_all_blocks()+0x11f
V  [libjvm.so+0x710bcc]  Parse::Parse(JVMState*, ciMethod*, float)+0x159c
V  [libjvm.so+0x30ab18]  ParseGenerator::generate(JVMState*)+0x88
V  [libjvm.so+0x39543a]  Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool)+0xc9a
V  [libjvm.so+0x309632]  C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x142
V  [libjvm.so+0x39a86d]  CompileBroker::invoke_compiler_on_method(CompileTask*)+0x2ed
V  [libjvm.so+0x39b19d]  CompileBroker::compiler_thread_loop()+0x43d
V  [libjvm.so+0x801cba]  JavaThread::run()+0x17a
V  [libjvm.so+0x6ed2d0]  java_start(Thread*)+0x100


Current CompileTask:
C2:    105    1    b        java.lang.Thread::<init> (49 bytes)

                                    

Comments
EVALUATION

See main CR
                                     
2011-09-14
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-main/hotspot/rev/7b5c767f229c
                                     
2011-09-08
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/7b5c767f229c
                                     
2011-09-04



Hardware and Software, Engineered to Work Together