7086560: 7085404 changes broke VM with -XX:-EnableInvokeDynamic

Add check that ciEnv::_CallSite_klass is initialized.

Reviewed-by: jrose